[package]
authors = ["ixsetf"]
edition = "2018"
name = "rustmania"
version = "0.1.0"

[dependencies]
clap = "2.33.0"
cpal = "0.10.0"
hound = "3.4.0"
lazy_static = "1.4.0"
lewton = "0.9.1"
minimp3 = "0.3.3"
nom = "4.1.0"
regex = "1"
serde = "1.0.79"
serde_derive = "1.0.99"
toml = "0.5.3"
rayon = "1.2.0"
rand = "0.7.0"
bincode = "1.1.2"
serde_yaml = "0.8.9"
log = "0.4"
fern = "0.5"
array-init = "0.1.0"
graphics = { path = "graphics" }

[dependencies.ggez]
git = "https://github.com/ggez/ggez.git"

[dependencies.num-rational]
version = "0.2"
default-features = false
features = ["std", "bigint-std", "serde"]

[workspace]
members = ["graphics"]