[package]
authors = ["ixsetf"]
edition = "2018"
name = "rustmania"
version = "0.1.0"
description = "A rhythm game in the vein of Stepmania and Etterna, currently in very early stages of development."

[dependencies]
cpal = "0.11.0"
hound = "3.4.0"
lewton = "0.9.1"
minimp3 = "0.3.3"
nom = "5.0.1"
serde = "1.0.104"
serde_derive = "1.0.101"
toml = "0.5.5"
rand = "0.7.2"
bincode = "1.2.1"
serde_yaml = "0.8.11"
log = "0.4"
fern = "0.5"
array-init = "0.1.1"
ggez = "0.5.1"
structopt = "0.3.7"
editor = { path = "editor" }
graphics = { path = "graphics" }
notedata = { path = "notedata" }
notefield = { path = "notefield" }
parallel-folder-walk = {path = "parallel-folder-walk"}

[workspace]
members = ["graphics", "notedata"]
