[package]
name = "editor"
version = "0.1.0"
authors = ["RGates94 <rgates275@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notedata = { path = "../notedata"}
utils = { path = "../utils" }
ggez = "0.5.1"

[dev-dependencies]
winit = "0.21.0"