[package]
name = "notedata"
version = "0.1.0"
authors = ["RGates94 <rgates275@gmail.com>"]
edition = "2018"

[features]
default = ["use-serde"]
use-serde = ["serde", "num-rational/serde"]

[dependencies]
nom = "5.0.1"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
num-rational = { version = "0.2", default-features = false, features = ["std"] }
