[package]
name = "notedata"
version = "0.1.0"
authors = ["RGates94 <rgates275@gmail.com>"]
edition = "2018"

[features]
default = ["std", "use-serde"]
std = ["nom/std", "num-rational/std", "serde/std"]
use-serde = ["serde", "num-rational/serde"]

[dependencies]
nom = { version = "5.1.0", default-features = false }
serde = { version = "1.0.101", optional = true, default_features = false, features = ["derive"] }
num-rational = { version = "0.2", default-features = false }
