[package]
name = "notefield"
version = "0.1.0"
authors = ["RGates94 <rgates275@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "0.1.1"
ggez = "0.5.1"
serde = "1.0.104"
serde_derive = "1.0.101"
toml = "0.5.5"
notedata = { path = "../notedata" }