[package]
name = "utils"
version = "0.1.0"
authors = ["RGates94 <rgates275@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "0.1.1"
cpal = "0.10.0"
ggez = "0.5.1"
lewton = "0.9.1"
hound = "3.4.0"
minimp3 = "0.3.3"
serde = "1.0.104"
serde_derive = "1.0.101"
toml = "0.5.5"
rayon = "1.5.0"
notedata = { path = "../notedata" }
